--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,7 @@
+    <%- include("templates/header") %>
+<div class="px-4 py-5 my-5 text-center">
 <h1>Page Not Found - 404</h1>
 <p>Sorry, the page you are looking for does not exist.</p>
 <p><a href="/">Go back to the home page</a></p>
+</div>
+    <%- include("templates/footer") %>
