--- a/views/members.ejs
+++ b/views/members.ejs
@@ -3,6 +3,6 @@
         <h1>Hello, <%= username %>.</h1>
         <%- include("templates/ducks") %>
             <br><button onclick="window.location='/logout'"
-                class="btn btn-outline-secondary btn-lg px-4">Logout</button>
+                class="btn btn-secondary btn-lg px-4">Logout</button>
     </div>
     <%- include("templates/footer") %>
