--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -9,7 +9,8 @@
       flex: 1;
     }
     footer {
-      background-color: #f8f9fa;
+      background-color: #212529;
+      color: white;
       padding: 20px 0;
       text-align: center;
       width: 100%;
@@ -19,9 +20,9 @@
     }
   </style>
 
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Davin Higo Comp 2537 (2024)</span>
+    <span>Davin Higo Comp 2537 (2024)</span>
   </div>
 </footer>
 </body> 
