fixed STUPID bug where header had capital h

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/Header") %>
+<%- include("templates/header") %>
     <div>
         <br>
         <h2 class="text-center">Users</h2>
