Fixed template/Footer to template/footer BECAUSE IT RUNS FINE UNTIL RENDER DOES IT

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,4 +8,4 @@
                     <% }); %>
         </ul>
     </div>
-    <%- include("templates/Footer") %>
+    <%- include("templates/footer") %>
